--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -3,23 +3,23 @@
     justify-content: space-between;
     flex-direction: row;
 
-    
-
 }
 .workflow{
+    margin-left: 20px;
     font-weight: 700;
-    size: 32px !important;
+    font-size: 32px !important;
     
 }
 .btn1{
-    margin-top: 10px;
-    padding: 5px 15px !important;
+    height: 100%;
+    margin: 10px 30px 10px 0;
+    padding: 5px 20px 5px 20px;
     background-color:#2B78D4 !important;
     color:white !important;
     border-radius: 7px !important;
     font:Montserrat;
-    font-weight: 600;
-    size: 18px !important ;
+    /* font-weight: 600; */
+    font-size: 20px !important ;
 }
 .search {
     margin-top: 10px;
