--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -1,10 +1,13 @@
 .topnav{
     position: sticky;
     top: 0;
+    height: 70px;
+    width: 100%;
     z-index: 999;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    background-color: #F4F9FF !important;
+    
     
 
 }
@@ -32,6 +35,8 @@
 }
 .ant-layout-header{
     background-color: #F4F9FF !important;
+    
+    
 }
 .modal_design{
     display: flex ;
