--- a/src/Component/Sidebar/sidebar.css
+++ b/src/Component/Sidebar/sidebar.css
@@ -8,16 +8,19 @@
 .ant-layout-sider{
     background: white !important;
 }
-.ant-layout {
-  background:  #F4F9FF !important;
-}
+
 .sidebar{
-    
+    width: 5% !important;
     height: 100%;
+    position: fixed !important ;
+    left: 0;
+    top: 0;
+    z-index: 999;
 }
 .logo img{
     height: 70px !important;
-    width: 80px !important;
+    width: 75px !important;
+    
 }
 .middle{
     height: 300px;
@@ -29,31 +32,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top:80px;
+  margin-top:60px;
+  margin-bottom:20px;
     
     
 }
 .middle img{
     height: 40px;
-    width: 47px;
+    width: 40px;
 
 }
 .bottom img{
   margin-bottom: 18px;
     height: 40px;
     width: 40px;
+    
     /* align-items: center; */
 
 }
 
 .contentGrid{
   
-  display: grid;
+  /* display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   row-gap: 20px;
   column-gap: 10px !important ;
   margin-left: 30px;
-  margin-top: 40px;
+  margin-top: 40px; */
 }
 
   .maincard {
