--- a/src/Component/Cards/content.css
+++ b/src/Component/Cards/content.css
@@ -1,8 +1,22 @@
 
-
 .maincard{
-
+  
   border-radius: 15px;
+}
+
+.maincard:hover{
+  border: 1px solid #00a0e9;
+  border-radius: 20px;
+}
+
+.card1{
+  display: block;
+  /* height: 150px;
+  width: 200px; */
+}
+
+.card2{
+  display: none;
 }
 
 
@@ -10,14 +24,12 @@
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 0;
-
 }
 .viewbutton_para{
     margin-top: 0;
     margin-bottom: 15px;
     font-weight: 300;
     font-size: 12px;
-    
 }
 .viewbutton_secpara{
     margin-bottom: 30px;
@@ -39,57 +51,61 @@
     margin-bottom: 10px ;
     border: 0;
     outline: 0;
-    
     border-bottom : 1px solid ;
-
     color: #002F68;
-  
     font-weight: 700;
-  
     font-family: 'Montserrat', sans-serif;
-  
     font-size: 16px;
-  
     line-height: 25px;
-
 }
 
 .ant-input{
     padding-left: 0 !important;
 } 
-.ant-layout {
+/* .ant-layout {
   background:  #F4F9FF !important;
+} */
+
+.ant-layout-content{
   
+  /* background-color: #8ed89c; */
+  height: 200px !important ;
 }
-
+/* .content_body{ */
+  /* background-color: #d1dcf4; */
   
-  .ant-modal-content{
-    
-    border-radius: 20px !important ;
-  }
-  .ant-modal-header{
-    border-radius: 20px 20px 0 0;
 
-  }
-  .ant-row{ 
-    width: 300px;
-    height: 150px;
-    border-radius: 15px;
-    padding: 0 !important;
 
-  }
-  .ant-layout{
-    margin-left: 38px;
-    margin-bottom: 30px;
-  }
+.ant-modal-content{  
   
+  border-radius: 20px !important ;
+}
+.ant-modal-header{
   
+  border-radius: 20px 20px 0 0;
+
+}
+.ant-row{ 
+  
+  width: 300px !important ;
+  height: 150px !important ;
+  border-radius: 15px;
+  padding: 0 !important;
+
+}
   
   .cardImg{
-    margin-top: 10px;
+    
+      margin: 5px 5px;
+      width: 40px;
+      height: 40px;
+      background-color: #d1dcf4;
+      border-radius: 5px;
+      margin-top: 10px;
     
   }
  .cardTitile{
+  font-style: bold;
   margin-top: 10px;
   color:#002F68;
   font-size:18px;
@@ -111,7 +127,41 @@
 
 .card2para{
     padding: 5px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
+    font-weight: 400;
+    font-size: 14px;
+    color: #5c83b1;
+    letter-spacing: 0.8px;
+    margin-left: 5px;
+}
+.card2btn1{
+  width: 80px;
+  height: 30px;
+  position: relative;
+  top: 20px;
+  left: 40px;
+  font-weight: 600;
+  border:1px solid skyblue;
+  background-color:white;
+  color: rgb(65, 119, 191);
+  border-radius: 7px;
+  
+}
+.card2btn2{
+  /* margin-left: 20px; */
+  /* background-color: #2B78D4; */
+  width: 120px;
+  height: 30px;
+  margin-bottom: 5px;
+  background-color:rgb(65, 119, 191);
+  color: white;
+  border: 0;
+  border-radius: 7px;
+  position: relative;
+  left: 140px;
+  bottom: 10px;
+  font-size: 16px;
+
 }
 
 .popupbtn{
@@ -131,3 +181,73 @@
   padding: 0 30px;
 
 }
+
+
+
+/* ---------------------------------------------------------------- */
+
+
+
+
+
+
+/* .gutter-box {
+  padding: 8px 0;
+  background: #00a0e9;
+} */
+
+/* .ant-layout-header {
+  height: 53px !important;
+  padding: 0 21px !important;
+} */
+/* .ant-row{
+  height: 150px !important;
+  margin:  0 !important;
+} */
+
+
+.ant-menu-vertical, .ant-menu-item:not(:last-child), .ant-menu-vertical-left, .ant-menu-item:not(:last-child), .ant-menu-vertical-right, .ant-menu-item:not(:last-child), .ant-menu-inline, .ant-menu-item:not(:last-child){
+  margin-bottom: 15px !important;
+  width: 70px;
+  background-color: white !important;
+}
+.ant-menu-inline.ant-menu-root .ant-menu-item, .ant-menu-inline.ant-menu-root .ant-menu-submenu-title{
+  align-items: center !important;
+  
+}
+.ant-layout-sider-children{
+  margin: 0;
+  padding: 0;
+  width: 70px;
+  background-color: white;
+}
+
+.ant-layout-sider .ant-layout-sider-dark .sidebar{
+  width: 70px;
+  background-color: aqua;
+} 
+/* .site-layout-sub-header-background{
+  
+}
+
+
+/* @media screen and (min-width: 769px) and (max-width: 1024px){
+  .contentGrid {
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    margin: 0 0px 0 15vh;
+  }
+  .btn1 {
+      margin-right: 0vh;
+  }
+  .middle{
+    margin-top: 10vh;
+  }
+  .bottom {
+    margin: 5vh 15px;
+  }
+  } */
+
+
+
+
+
