--- a/src/Component/Dashboard/dashboard.css
+++ b/src/Component/Dashboard/dashboard.css
@@ -1,12 +1,31 @@
+
+.full_body{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+/* .side_body{
+    width: 80px;
+    background-color: rgb(215, 127, 11);
+    height: 100vh;
+} */
+
 .body_content{
+    background-color: #F4F9FF;
+    position: absolute;
     width: 95%;
     height:100vh;
+    margin-left: 80px;
 }
 .cards{
+    
     margin-top: 30px;
+    margin-left: 20px;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    row-gap: 20px;
-    column-gap: 0px!important;
-    /* background-color: #F4F9FF !important; */
+    row-gap: 30px;
+    column-gap: 0px !important;
+    /* background-color: # F4F9FF!important; */
+    /* background-color: mediumaquamarine; */
 }
