--- a/src/Component/Sidebar/sidebar.css
+++ b/src/Component/Sidebar/sidebar.css
@@ -1,168 +1,66 @@
-.ant-layout-sider, .ant-layout-sider-dark{
 
-    flex: 0 0 200px !important;
-    max-width: 80px !important;
-    min-width: 60px !important;
-    width: 200px !important;
-}
 .ant-layout-sider{
     background: white !important;
 }
 
+/* .ant-layout {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    height: 100vh !important;
+    /* min-height: 0; */
+
+    
+ */
+
 .sidebar{
-    width: 5% !important;
-    height: 100%;
+    /* width: 5% !important; */
+    width: 60px;
+    height: 100vh;
     position: fixed !important ;
     left: 0;
     top: 0;
     z-index: 999;
+    background-color: #F4F9FF;
 }
 .logo img{
-    height: 70px !important;
-    width: 75px !important;
+    height: 60px !important;
+    width: 60px !important;
+    background-color: #F4F9FF;
     
 }
 .middle{
+    width: 60px;
     height: 300px;
-    
-    margin-top: 100px !important;
+    background-color: #F4F9FF;
+    margin-top: 80px !important;
 
 }
 .bottom{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top:60px;
-  margin-bottom:20px;
+  width: 60px;
+  margin-top:35px;
+  margin-bottom:18px;
     
     
 }
 .middle img{
-    height: 40px;
-    width: 40px;
+  height: 35px;
+  width: 35px;
 
 }
 .bottom img{
-  margin-bottom: 18px;
-    height: 40px;
-    width: 40px;
+  margin-bottom: 15px;
+  height: 35px;
+  width: 35px;
     
     /* align-items: center; */
 
 }
 
-.contentGrid{
+
+
   
-  /* display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  row-gap: 20px;
-  column-gap: 10px !important ;
-  margin-left: 30px;
-  margin-top: 40px; */
-}
-
-  .maincard {
-    border-radius: 20px;
-  }
-  .ant-card-body {
-    padding: 9px !important;
-  }
-  .cardImg {
-    margin: 5px 5px;
-    width: 40px;
-    height: 40px;
-    background-color: #d1dcf4;
-    border-radius: 5px;
-  }
-  
-  .cardTitile {
-    color: #002f68;
-    font-weight: 700;
-    font-style: bold;
-  }
-  .cardPara {
-    font-weight: 400;
-    font-size: 12px;
-    color: #5c83b1;
-  }
-  .cardSpan {
-    font-size: 14px;
-    color: #5c83b1;
-    font-weight: 400;
-  }
-  /* .gutter-box {
-    padding: 8px 0;
-    background: #00a0e9;
-  } */
- 
-  .ant-layout-header {
-    height: 53px !important;
-    padding: 0 21px !important;
-  }
-  .ant-row{
-    /* height: 150px !important; */
-    margin:  0 !important;
-  }
-  .ant-layout-content{
-    margin: 15px 0 !important;
-  }
-  
-  .ant-menu-vertical, .ant-menu-item:not(:last-child), .ant-menu-vertical-left, .ant-menu-item:not(:last-child), .ant-menu-vertical-right, .ant-menu-item:not(:last-child), .ant-menu-inline, .ant-menu-item:not(:last-child){
-    margin-bottom: 15px !important;
-  }
-  .ant-menu-inline.ant-menu-root .ant-menu-item, .ant-menu-inline.ant-menu-root .ant-menu-submenu-title{
-    align-items: normal !important;
-  }
-  /* .site-layout-sub-header-background{
-    
-  } */
-  .card2{
-    display: none;
-    
-  }
-  .maincard:hover{
-    
-    border: 1px solid #00a0e9;
-    border-radius: 20px;
-
-  }
-  .card1{
-    display: block;
-    
-    
-  }
-  .card2btn2{
-    width: 120px;
-    height: 30px;
-    margin-bottom: 5px;
-    background-color:rgb(65, 119, 191);
-    color: white;
-    border: 0;
-    border-radius: 7px;
-    position: relative;
-    left: 70px;
-    bottom: 5px;
-    font-size: 16px;
-
-  }
-  .card2btn1{
-    width: 80px;
-    height: 30px;
-    position: relative;
-    bottom: 5px;
-    left: 60px;
-    font-weight: 600;
-    border:1px solid skyblue;
-    background-color:white;
-    color: rgb(65, 119, 191);
-    border-radius: 7px;
-  }
-  .card2para{
-    letter-spacing: 0.8px;
-    font-weight: 400;
-    font-size: 15px;
-    color: black;
-    margin-left: 5px;
-
-  }
   
